--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,70 @@
+.nav-link {
+  color: black;
+  margin: 1px;
+}
 
+.navbar-brand {
+  color: white;
+}
+
+.nav-link:hover {
+  margin: 0px;
+  color: white;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
+.active {
+  border-radius: 5px;
+  background-color: pink;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  background-color: aqua;
+  text-align: center;
+}
+
+.canvasStyle {
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+header {
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: white;
+}
+header .js-appear.hidden {
+  display: none;
+}
+header .js-hide.hidden {
+  display: none;
+}
+header .click {
+  cursor: pointer;
+}
+header .cursive {
+  font-family: cursive;
+}
+header .intro-text {
+  font-size: 20px;
+}
+header .courier {
+  font-family: "Courier New", Courier, monospace;
+}
 
 /*# sourceMappingURL=style.css.map */
