--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,3 +2,5 @@
 @import 'components/_main';
 @import 'components/_header';
 @import 'base/_mixins';
+@import 'components/_ani';
+@import 'components/_aboutme';
