--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,3 +4,6 @@
 @import 'base/_mixins';
 @import 'components/_ani';
 @import 'components/_aboutme';
+@import 'components/_projects';
+@import 'components/_contact';
+@import 'components/_footer';
