--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ header .courier {
   flex-direction: column;
   align-items: center;
   background-color: white;
-  padding: 50px;
+  padding: 0 50px;
 }
 .about-me .about-me-text {
   margin-top: 20px;
@@ -140,7 +140,6 @@ header .courier {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 15px;
 }
 
 .about-me-header {
@@ -151,6 +150,8 @@ header .courier {
   padding-top: 60px;
   margin-bottom: 0px;
   background-color: white;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .pic-prop {
@@ -195,7 +196,7 @@ header .courier {
     width: 50%;
   }
 
-  .about-me-text, .icons {
+  .icons {
     padding-left: 50px;
   }
 
@@ -205,11 +206,19 @@ header .courier {
     font-size: 40px;
     width: 60px;
   }
+
+  .about-me {
+    padding: 50px;
+  }
 }
 @media screen and (min-width: 940px) {
   .about-me-intro {
     flex-direction: row;
     padding: 10px 100px 10px 100px;
+  }
+
+  .about-me-text {
+    padding-left: 50px;
   }
 }
 @media screen and (min-width: 1040px) {
@@ -217,6 +226,192 @@ header .courier {
     font-size: 60px;
     width: 80px;
   }
+}
+.projects-header {
+  font-family: "Lato";
+  font-size: 50px;
+  text-align: center;
+  padding-top: 60px;
+  margin-bottom: 0px;
+  font-size: 50px;
+  text-align: center;
+  margin-bottom: 0px;
+  border-top: 10px orange solid;
+}
+
+.projects-div {
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.projects {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 20px;
+}
+
+.project-pic {
+  position: relative;
+  padding: 5px;
+  max-width: 300px;
+  margin: 0px;
+}
+
+.project-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.project-div:hover .project-button {
+  opacity: 1;
+}
+
+.project-div:hover .project-pic {
+  opacity: 0.7;
+}
+
+.project-button {
+  color: black;
+  text-align: center;
+  border-radius: 5px;
+  position: absolute;
+  top: 120px;
+  opacity: 0;
+  padding: 5px;
+  width: 120px;
+  border: 1px black solid;
+  cursor: pointer;
+  background-color: pink;
+}
+.project-button:hover {
+  background-color: white;
+  color: black;
+  text-decoration: none;
+}
+
+.project-1, .project-2, .project-3 {
+  margin: 20px;
+  opacity: 0;
+  transform: translateX(-10em) rotateY(180deg);
+  transition: transform 1s 0.25s cubic-bezier(0.68, -0.55, 0.265, 1.55), opacity 0.3s 0.25s ease-in;
+  will-change: transform, opacity;
+}
+
+.project-4 {
+  opacity: 0;
+  transform: translateX(-10em) rotate(360deg);
+  transition: transform 1s 0.25s cubic-bezier(0.68, -0.55, 0.265, 1.55), opacity 0.3s 0.25s ease-in;
+  will-change: transform, opacity;
+}
+
+.project-1.is-visible, .project-2.is-visible, .project-3.is-visible, .project-4.is-visible {
+  opacity: 1;
+  transform: translateX(0em);
+}
+
+@media screen and (min-width: 800px) {
+  .project-pic {
+    max-width: 400px;
+    margin: 0px;
+  }
+}
+@media screen and (min-width: 920px) {
+  .projects-header {
+    padding-bottom: 20px;
+  }
+
+  .projects-div {
+    padding-bottom: 50px;
+  }
+}
+@media screen and (min-width: 1400px) {
+  .projects {
+    padding: 150px 100px;
+  }
+
+  .project-1 {
+    margin: 0px;
+  }
+
+  .project-2 {
+    margin: 0px;
+    transform: translateX(-50em) rotateY(180deg);
+    transition-delay: 0.5s;
+  }
+
+  .project-3 {
+    margin: 0px;
+    transform: translateX(-70em) rotateY(180deg);
+    transition-delay: 1s;
+  }
+}
+.contact-form {
+  border-top: 10px orange solid;
+  position: relative;
+  padding: 10px;
+  background-color: white;
+  text-align: center;
+}
+.contact-form .contact-header {
+  font-family: "Lato";
+  font-size: 50px;
+  text-align: center;
+  padding-top: 60px;
+  margin-bottom: 0px;
+}
+.contact-form .contact-text {
+  font-weight: bold;
+}
+.contact-form .contact-submit {
+  margin: 10px;
+  background-color: white;
+  border: 1px black solid;
+  border-radius: 5px;
+  padding: 5px;
+  width: 100px;
+}
+.contact-form .contact-submit:hover {
+  background-color: black;
+  color: lightblue;
+  text-decoration: none;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (min-width: 500px) {
+  .contact-form {
+    padding: 100px;
+  }
+}
+footer {
+  color: orange;
+  text-align: center;
+  padding: 10px;
+  background-color: rgba(0, 0, 0, 0.4);
+  width: 100%;
+}
+footer .footer-icon {
+  margin: 5px;
+  padding: 10px;
+  text-align: center;
+  color: black;
+  font-size: 20px;
+  background-color: pink;
+  border-radius: 5px 20px;
+  width: 40px;
+}
+
+.footer-icon-container {
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 /*# sourceMappingURL=style.css.map */
