--- a/scss/components/__contact.scss
+++ b/scss/components/__contact.scss
@@ -38,6 +38,6 @@
 
 @media screen and (min-width: 500px) {
     .contact-form{
-        padding: 100px;
+        padding: 20px 50px 70px 50px;
     }
 }
