--- a/scss/components/__contact.scss
+++ b/scss/components/__contact.scss
@@ -21,7 +21,7 @@
         width: 100px;
         &:hover {
             background-color: black;
-            color: lightblue;
+            color: pink;
             text-decoration: none;
         }
     }
@@ -34,6 +34,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    textarea {
+        padding: 10px;
+    }
 }
 
 @media screen and (min-width: 500px) {
