--- a/scss/components/__contact.scss
+++ b/scss/components/__contact.scss
@@ -36,11 +36,17 @@
     align-items: center;
     textarea {
         padding: 10px;
+        height: 200px;
+        width: 300px;
     }
 }
 
 @media screen and (min-width: 500px) {
     .contact-form{
         padding: 20px 50px 70px 50px;
+    }
+    .form textarea {
+        height: 300px;
+        width: 400px;
     }
 }
