--- a/scss/components/__nav.scss
+++ b/scss/components/__nav.scss
@@ -4,7 +4,11 @@
 }
 
 nav {
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: white;
+}
+
+.home-link {
+    color: white;
 }
 
 .navbar-brand {
