--- a/scss/components/__header.scss
+++ b/scss/components/__header.scss
@@ -16,6 +16,18 @@ header {
         display: none;
     }
     
+    .letters {
+        display: flex;
+        justify-content: center;
+        font-size: 45px;
+    }
+    .word {
+        padding: 0px 8px 8px 8px;
+    }
+
+    .name {
+        padding-left: 8px;
+    }
     
     .js-hide.hidden {
         display: none;
