--- a/scss/components/__header.scss
+++ b/scss/components/__header.scss
@@ -20,6 +20,7 @@ header {
         display: flex;
         justify-content: center;
         font-size: 45px;
+        flex-wrap: wrap;
     }
     .word {
         padding: 0px 8px 8px 8px;
