--- a/scss/components/__projects.scss
+++ b/scss/components/__projects.scss
@@ -46,7 +46,7 @@
     text-align: center;
     border-radius: 5px;
     position: absolute;
-    top: 120px;
+    top: 70px;
     opacity: 0;
     padding: 5px;
     width: 120px;
@@ -78,6 +78,9 @@
     .project-pic{
         max-width: 400px;
         margin: 0px;
+    }
+    .project-button {
+        top: 110px;
     }
 }
 
