--- a/scss/components/__header.scss
+++ b/scss/components/__header.scss
@@ -36,6 +36,9 @@ header {
     
     .click {
         cursor: pointer;
+        &:hover {
+            text-shadow: 1px 1px pink;
+        }
     }
     
     .cursive {
