--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ nav {
 
 @media screen and (min-width: 500px) {
   nav {
-    background-color: transparent;
+    background-color: rgba(255, 255, 255, 0.7);
   }
 }
 * {
