--- a/scss/components/__nav.scss
+++ b/scss/components/__nav.scss
@@ -30,6 +30,6 @@ nav {
 
 @media screen and (min-width: 500px) {
     nav {
-        background-color: transparent;
-    }
+            background-color: rgba(255, 255, 255, 0.7);
+        }
 }
