--- a/scss/components/__footer.scss
+++ b/scss/components/__footer.scss
@@ -1,5 +1,5 @@
 footer {
-    color: orange;
+    color: pink;
     text-align: center;
     padding: 10px;
     background-color: rgba(0, 0, 0, 0.4);
