--- a/scss/components/__contact.scss
+++ b/scss/components/__contact.scss
@@ -1,7 +1,7 @@
 @import '../base/_mixins';
 
 .contact-form {
-    border-top: 10px orange solid;
+    border-top: 10px pink solid;
     position: relative;
     padding: 10px;
     background-color: white;
