--- a/scss/components/__projects.scss
+++ b/scss/components/__projects.scss
@@ -5,7 +5,7 @@
     font-size: 50px;
     text-align: center;
     margin-bottom: 0px;
-    border-top: 10px orange solid;
+    border-top: 10px pink solid;
 }
 
 .projects-div {
